--- a/yaml-file.yml
+++ b/yaml-file.yml
@@ -1,23 +1,38 @@
 AWSTemplateFormatVersion: 2010-09-09
-
-Description: roman number  converter
+Description: |
+  flask uygulaması ile cloudformationdan instance ayaga kaldırmak.
 Resources:
-  HsnRoman:
+  MySecGrp:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupDescription: Enable SSH and HTTP # Required
+      SecurityGroupIngress:
+        - IpProtocol: tcp
+          FromPort: 22
+          ToPort: 22
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 80
+          ToPort: 80
+          CidrIp: 0.0.0.0/0
+
+  WebServerHost:
     Type: AWS::EC2::Instance
     Properties:
       ImageId: ami-04cb4ca688797756f
       InstanceType: t2.micro
       KeyName: firstkey
       SecurityGroupIds:
-        - !Ref hsnsecgrp
+        - !Ref MySecGrp
       Tags:
         - Key: Name
-          Value: !Sub Hasan Roman Number Converter ${AWS::StackName} Stack
+          Value: !Sub Web Server of ${AWS::StackName}
+
       UserData: !Base64 |
         #!/bin/bash
          yum update -y
          yum install python3 -y
-         FOLDER="https://raw.githubusercontent.com/Hasan-ilker/rpman-numerials-conveter-Project/main/"
+         FOLDER="https://raw.githubusercontent.com/Hasan-ilker/rpman-numerials-conveter-Project/main"
          cd /home/ec2-user
          python3 -m venv env
          source env/bin/activate
@@ -28,21 +43,9 @@ Resources:
          cd ..
          pip install flask
          python3 roman-numerals-converter-app.py
-  hsnsecgrp:
-    Type: AWS::EC2::SecurityGroup
-    Properties:
-      GroupDescription: ssh http # Required
-      GroupName: hasan
-      SecurityGroupIngress:
-        - IpProtocol: tcp
-          FromPort: 22
-          ToPort: 80
-          CidrIp: 0.0.0.0/0
-
 
 Outputs:
   DnsName:
-    Description: hasanec2url
     Value: !Sub
       - http://${PublicAddress}
-      - PublicAddress: !GetAtt HsnRoman.PublicDnsName
+      - PublicAddress: !GetAtt WebServerHost.PublicDnsName
